<resources>
    <string name="app_name">C196ProjectV3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">WGU</string>

    <string name="termlist_fragment_label">Term List</string>
    <string name="term">Term List</string>

    <string name="courselist_fragment_label">Course List</string>
    <string name="course">Course List</string>

    <string name="home">Home</string>

    <string name="assessmentlist_fragment_label">Assessment List</string>
    <string name="assessment">Assessment List</string>

    <string name="term_editor_fragment_label">Term Editor</string>
    <string name="termeditor">Term Editor</string>

    <string name="term_detail_fragment_label">Term Details</string>
    <string name="termedetailview">Term Details</string>

    <string name="assessmenteditor_fragment_label">Assessment Editor</string>
    <string name="assessmenteditor">Assessment Editor</string>

    <string name="courseeditor_fragment_label">Course Editor</string>
    <string name="courseeditor">Course Editor</string>

    <string name="coursedetails_fragment_label">Course Details</string>
    <string name="coursedetails">Course Details</string>

    <string name="coursenotes">Course Notes</string>
    <string name="save">Save</string>

    <string name="coursenoteseditor">Course Notes Editor</string>

    <string name="savebutton">Save</string>
    <string name="deletebutton">Delete</string>

    <string name="mentoreditor_fragment_label">Mentor Editor</string>
    <string name="mentor">Mentor Editor</string>

    <string name="welcome">Welcome to the WGU app!</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>