<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.android.c196projectv3.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_TermListFragment"
            app:destination="@id/TermFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_CourseListFragment"
            app:destination="@id/CourseFragment" />
        <action
            android:id="@+id/action_HomeFragment_to_AssessmentListFragment"
            app:destination="@id/AssessmentFragment" />
    </fragment>
    <fragment
        android:id="@+id/TermFragment"
        android:name="com.example.android.c196projectv3.TermsListFragment"
        android:label="@string/termlist_fragment_label"
        tools:layout="@layout/fragment_term">

        <action
            android:id="@+id/action_TermListFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
        <action
            android:id="@+id/action_TermListFragment_to_TermEditorFragment"
            app:destination="@id/TermEditorFragment" />
        <action
            android:id="@+id/action_TermListFragment_to_TermDetailsFragment"
            app:destination="@id/TermDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/AssessmentFragment"
        android:name="com.example.android.c196projectv3.AssessmentFragment"
        android:label="@string/assessmentlist_fragment_label"
        tools:layout="@layout/fragment_assessment">

        <action
            android:id="@+id/action_AssessmentListFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
        <action
            android:id="@+id/action_AssessmentListFragment_to_AssessmentEditorFragment"
            app:destination="@id/AssessmentEditorFragment" />
    </fragment>
    <fragment
        android:id="@+id/AssessmentEditorFragment"
        android:name="com.example.android.c196projectv3.AssessmentEdiorFragment"
        android:label="@string/assessmenteditor_fragment_label"
        tools:layout="@layout/fragment_assessment_editor">

        <action
            android:id="@+id/action_AssessmentEditorFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
        <action
            android:id="@+id/action_AssessmentEditorFragment_to_AssessmentListFragment"
            app:destination="@id/AssessmentFragment" />
    </fragment>
    <fragment
        android:id="@+id/TermEditorFragment"
        android:name="com.example.android.c196projectv3.TermEditorFragment"
        android:label="@string/term_editor_fragment_label"
        tools:layout="@layout/fragment_term_editor">

        <action
            android:id="@+id/termEditorFragment_to_TermListFragment"
            app:destination="@id/TermFragment" />
        <action
            android:id="@+id/action_AssessmentListFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/TermDetailsFragment"
        android:name="com.example.android.c196projectv3.TermDetailsFragment"
        android:label="@string/term_detail_fragment_label"
        tools:layout="@layout/fragment_term_details">

        <action
            android:id="@+id/action_TermDetailsFragment_to_TermFragment"
            app:destination="@id/TermFragment" />
        <action
            android:id="@+id/action_TermDetailsFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/CourseFragment"
        android:name="com.example.android.c196projectv3.CourseListFragment"
        android:label="@string/courselist_fragment_label"
        tools:layout="@layout/fragment_course">

        <action
            android:id="@+id/action_CourseListFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
        <action
            android:id="@+id/action_CourseListFragment_to_CourseEditorFragment"
            app:destination="@id/courseEditorFragment" />
        <action
            android:id="@+id/action_CourseFragment_to_courseDetailsFragment"
            app:destination="@id/courseDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/courseEditorFragment"
        android:name="com.example.android.c196projectv3.CourseEditorFragment"
        android:label="@string/courseeditor_fragment_label"
        tools:layout="@layout/fragment_course_editor" >
        <action
            android:id="@+id/action_courseEditorFragment_to_CourseFragment"
            app:destination="@id/CourseFragment" />
        <action
            android:id="@+id/action_courseEditorFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/courseDetailsFragment"
        android:name="com.example.android.c196projectv3.CourseDetailsFragment"
        android:label="@string/coursedetails_fragment_label"
        tools:layout="@layout/fragment_course_details" >
        <action
            android:id="@+id/action_courseDetailsFragment_to_CourseFragment"
            app:destination="@id/CourseFragment" />
        <action
            android:id="@+id/action_courseDetailsFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
        <action
            android:id="@+id/action_courseDetailsFragment_to_courseNotesFragment"
            app:destination="@id/courseNotesFragment" />
    </fragment>
    <fragment
        android:id="@+id/courseNotesFragment"
        android:name="com.example.android.c196projectv3.CourseNotesFragment"
        android:label="@string/coursenotes"
        tools:layout="@layout/fragment_course_notes" >
        <action
            android:id="@+id/action_courseNotesFragment_to_courseDetailsFragment"
            app:destination="@id/courseDetailsFragment" />
        <action
            android:id="@+id/action_courseNotesFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
</navigation>